consolidated component responsibilities

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,5 +6,5 @@
 
 @import "../components/field";
 @import "../components/panel";
-@import "../components/list";
+@import "../components/checklist";
 @import "../components/toc";
