added error handling

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import "./styles/layout";
 
 @import "../components/field";
+@import "../components/notification";
 @import "../components/panel";
 @import "../components/checklist";
 @import "../components/toc";
