--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-@import "./styles/util/list_bare";
 @import "./styles/util/striped";
+@import "./styles/util/list_bare";
+@import "./styles/util/button";
 
 @import "./styles/base";
 @import "./styles/layout";
