--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import "./styles/util/striped";
 @import "./styles/util/list_bare";
 @import "./styles/util/button";
+@import "./styles/util/field";
+@import "./styles/util/icon";
 
 @import "./styles/base";
 @import "./styles/layout";
